<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medidores</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ingreso_lecturas">Listado de domicilios</string>
    <string name="title_activity_ingreso_consumo">Ingreso de consumo</string>
    <string name="ingreso_lecturas">Ingreso lecturas</string>
    <string name="importacion">Importación</string>
    <string name="exportacion">Exportación</string>
    <string name="imagen_tausoft">Tausoft</string>
    <string name="criterios_seleccion">Criterios de selección</string>
    <string name="ingrese_ruta_med">Seleccione ruta medición</string>
    <string name="importar_registros">Importar registros</string>
    <string name="ascendente">Ascendente</string>
    <string name="descendente">Descendente</string>
    <string name="guardar_lectura">Guardar lectura</string>
    <string name="consumo">Consumo</string>
    <string name="title_activity_import">Importación</string>
    <string name="tv_import">Los registros se importarán en el formato CSV.</string>
    <string name="title_activity_seleccion_criterios">Selección de criterios</string>
    <string name="title_activity_export_acvtivity">Exportación</string>
    <string name="Seccion_export">Los registros se exportarán en el formato CSV.</string>
    <string name="exportar_registros">Exportar registros</string>
    <string name="imagen_android">Android</string>
    <string name="listview_text">Default</string>
    <string name="ruta_desde">Ruta inicial</string>
    <string name="ruta_hasta">Ruta final</string>

</resources>
