<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImportActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_import"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/imagen_android"
        android:src="@drawable/icon" />

    <Button
        android:id="@+id/btn_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_import"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:background="#088A08"
        android:text="@string/importar_registros"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/editTextRutaDesde"
        android:text="Desde ruta"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextRutaDesde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="@string/ruta_desde"
        android:inputType="number"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editTextRutaDesde"
        android:layout_marginTop="21dp"
        android:text="@string/tv_import"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_import"
        android:layout_below="@+id/editTextRutaDesde"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/editTextRutaDesde"
        android:text="Hasta ruta"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextRutaHasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editTextRutaDesde"
        android:ems="10"
        android:hint="@string/ruta_hasta"
        android:inputType="number"
        android:textColor="#FFFFFF" />
    
</RelativeLayout>
